git ignore geändert

--- a/LogaraithmicRegression/.gitignore
+++ b/LogaraithmicRegression/.gitignore
@@ -1,3 +1,58 @@
+
+# FILES #
+#########
+.directory
+*.stackdump
+*.project
+*.cproject
+*.exe
+.gdbinit
+.dbeaver
+
+# Folder #
+##########
+.settings
+.metadata
+
+# Compiled source #
+###################
+*.o
+
+# LaTeX #
+#########
+*.acn
+*.acr
+*.alg
+*.aux
+*.bbl
+*.blg
+*.dvi
+*.fdb_latexmk
+*.glg
+*.glo
+*.gls
+*.idx
+*.ilg
+*.ind
+*.ist
+*.lof
+*.log
+*.lot
+*.maf
+*.mtc
+*.mtc0
+*.nav
+*.nlo
+*.out
+*.pdfsync
+*.ps
+*.snm
+*.synctex.gz
+*.toc
+*.vrb
+*.xdy
+
+
 # Prerequisites
 *.d
 
